[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maze_solver"
version = "0.1.0"
description = "A simple maze solver. A guided project by boot.dev"
readme = "README.rst"
authors = [
  {name = "Flarenzy", email = "N/A"}
]
maintainers = [
  {name = "Flarenzy", email = "N/A"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Flarenzy/maze_solver/issues"
changelog = "https://github.com/Flarenzy/maze_solver/blob/master/changelog.md"
homepage = "https://github.com/Flarenzy/maze_solver"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

